--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "pw:install": "playwright install"
   },
-  "keywords": ["copilot", "github", "instructions", "templates", "react", "vite"],
+  "keywords": [
+    "copilot",
+    "github",
+    "instructions",
+    "templates",
+    "react",
+    "vite"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -20,5 +33,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^7.0.6"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.54.2"
   }
 }
